Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Ristorante Con Fusion </a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto"></ul>
             </div>  
@@ -38,7 +38,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -66,7 +67,6 @@
             </div>
         </div>
 
-
         <div class="row row-content align-self-center">
             <div class="col col-sm col-md">
                 <h2>Corporate Leadership</h2>
@@ -82,7 +82,7 @@
                                                <th>2014</th>
                                                <th>2015</th>
                                             </tr>
-                                        <th head>
+                                        </thead>
                                         <tbody>
                                             <tr>
                                                 <th>Employees</th>
@@ -95,7 +95,7 @@
                                                 <td>15000</td>
                                                 <td>45000</td>
                                                 <td>100,000</td>
-                                            </tr>
+                                             </tr>
                                             <tr>
                                                 <th>Annual Turnover</th>
                                                 <td>$251,325</td>
