--- a/contactus.html
+++ b/contactus.html
@@ -21,13 +21,13 @@
         <div class="container">
             <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav mr-auto">
-            </div>            
-                        <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                <ul class="navbar-nav mr-auto">        
+		    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+		    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+		    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+		    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+	    </div>
         </div>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
 	    <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,13 @@
 
     <div class="container">
         <div class="row">
+            <h3>Contact Us</h3>
             <ol class="col-12 breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                 <li class="breadcrumb-item active">Contact Us</li>
             </ol>
             <div class="col-12">
-               <h3>Contact Us</h3>
-               <hr>
+		<hr>   
             </div>
         </div>
 
@@ -99,10 +99,14 @@
 			<div class="col-md-10">
 			    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
 			</div>
+		    </div>
+		    <div class="form-group row">
 			<label for="lastname" class="col-md-2 col-form-label">Last Name</label>
 			<div class="col-md-10">
 			    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
 			</div>
+		    </div>
+		    <div class="form-group row">
 			<label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
 			<div class="col-5 col-md-3">
 			    <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area code">
@@ -110,11 +114,15 @@
 			<div class="col-7 col-md-7">
 			    <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
 			</div>
+		    </div>
+		    <div class="form-group row">
 			<label for="emailid" class="col-md-2 col-form-label">Email</label>
 			<div class="col-md-10">
 			    <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
 			</div>
-		         <div class="col-md-6 offset-md-2">
+		    </div>
+		    <div class="form-group row">
+			<div class="col-md-6 offset-md-2">
 			    <div class="form-check">
 				<input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
 				<label class="form-check-label" for="approve">
@@ -144,7 +152,7 @@
             </div>
              <div class="col-12 col-md">
             </div>
-       </div>
+        </div>
 
     </div>
 
