--- a/index.html
+++ b/index.html
@@ -28,12 +28,51 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModa">
+                    <span class="fa fa-sign-in"></span>Login</a>
+                </span>
             </div>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
+    <div id="loginModa" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+        <!--Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exempleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exempleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exempleInputPassword3">Password</label>
+                                <input type="password" class="form-contol form-control-sm mr-1" id="exempleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -46,7 +85,10 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-2 align-self-center">
-                    <a href="#reserve" class="btn btn-warning btn-sm" role="button">Reserve Table</a>
+                    <a href="#reserve" class="btn btn-block nav-link btn-warning" 
+                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>" 
+                            data-placement="bottom" role="button">Reserve Table
+                    </a>
                 </div>
             </div>
         </div>
@@ -75,12 +117,11 @@
             <div class="col-6 col-sm col-md">    
                 <h2 class="mt-0 mr-3">Weekend Grand Buffet <span class="badge badge-danger"> NEW </span></h2>
                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div
+            </div>
             <div class="media order-sm-last">
                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand Buffet">
             </div>    
         </div>
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
@@ -177,6 +218,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
