--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </nav>
     <div id="loginModa" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
-        <!--Modal content-->
+        <!--Modal Login content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
@@ -73,6 +73,80 @@
             </div>
         </div>
     </div>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+        <!--Modal reserve content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-3">
+                                <label for="text" class="text">Number of guests</label>
+                            </div>
+                            <div class="form-group col-sm-8">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions">
+                                    <label class="form-check-label" for="inlineRadio6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-sm-3">
+                                <label for="text" class="text">Section</label>
+                            </div>
+                            <div class="form-group btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success">
+                                  <input type="radio" name="options" id="options1" autocomplete="on">Non-smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="options" id="options2" autocomplete="off">Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <label for="text" class="text col-sm-3">Date and Time</label>
+                            <div>
+                              <input type="date" class="form-control" placeholder="Date">
+                            </div>    
+                            <div>
+                              <input type="time" class="form-control ml-3" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="btn btn-group-toggle offset-3">
+                                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-primary btn-sm ml-1">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron">
         <div class="container">
@@ -85,9 +159,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-2 align-self-center">
-                    <a href="#reserve" class="btn btn-block nav-link btn-warning" 
-                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>" 
-                            data-placement="bottom" role="button">Reserve Table
+                    <a href="#reserveModal" class="btn btn-block nav-link btn-warning" 
+                        data-toggle="modal" data-placement="bottom" role="button">Reserve Table
                     </a>
                 </div>
             </div>
@@ -132,7 +205,15 @@
                     </a>
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
-                    </a>            
+                    </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                          <span class="fa fa-pause"> </span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                        <span class="fa fa-play"> </span>
+                        </button>
+                    </div>            
                 </div>
             </div>
         </div>
@@ -175,40 +256,6 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row row-content align-self-center">
-            <div class="col-12 col-sm-8 mx-auto">    
-                <div class="card" id="reserve">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card body">   
-                        <form>    
-                            <div class="radio-inline-group row">
-                                <label for="text" class="col-12 col-md-3 col-form-label">Number of guess </label>
-                                <div class="col-7 col-md-8">
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> 1</label>
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> 2</label>
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3"> 3</label>
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4"> 4</label>
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5"> 5</label>
-                                    <label class="radio-inline"><input type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6"> 6</label>
-                                </div>
-                            </div> 
-                            <div class="form-group row">
-                                <label for="DateTime" class="col-12 col-md-3 col-form-label">Date and Time</label>
-                                <div class="col-7 col-md-5">
-                                    <input type="Date" class="form-control" id="Date" name="Date" placeholder="Date">
-                                </div>
-                                <div class="col-5 col-md-3">
-                                    <input type="Time" class="form-control" id="Time" name="Time" placeholder="Time">
-                                </div>
-                            </div>       
-                            <div class="offset-md-3 col-md-10">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -262,7 +309,13 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
+            $("#mycaroussel").carousel({interval: 2000});
+            $("#mycarousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#mycarousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
         });
     </script>
 </body>
